src/objects/CBInvoice__c.object
<CustomObject>
    <fields>
        <fullName>CBAccountSign__c</fullName>
        <formula>TEXT(CBAccount__r.CBAccountType__r.Sign__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBAccountSign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Account</label>
        <referenceTo>CBAccount__c</referenceTo>
        <relationshipLabel>CB Invoices</relationshipLabel>
        <relationshipName>CB_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBBudgetYear__c</fullName>
        <formula>CBPeriod__r.CBBudgetYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CB Budget Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBDivision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Division</label>
        <referenceTo>CBDivision__c</referenceTo>
        <relationshipLabel>CB Invoices</relationshipLabel>
        <relationshipName>CB_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBKey__c</fullName>
        <label>CBKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Period</label>
        <referenceTo>CBPeriod__c</referenceTo>
        <relationshipLabel>CB Invoices</relationshipLabel>
        <relationshipName>CB_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBVariable1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 1</label>
        <referenceTo>CBVariable1__c</referenceTo>
        <relationshipLabel>CB Invoices</relationshipLabel>
        <relationshipName>CB_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBVariable2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 2</label>
        <referenceTo>CBVariable2__c</referenceTo>
        <relationshipLabel>CB Invoices</relationshipLabel>
        <relationshipName>CB_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBVariable3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 3</label>
        <referenceTo>CBVariable3__c</referenceTo>
        <relationshipLabel>CB Invoices</relationshipLabel>
        <relationshipName>CB_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <label>ExtId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <displayFormat>I-{00000}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <summarizedField>CBInvoiceLine__c.Amount__c</summarizedField>
        <summaryForeignKey>CBInvoiceLine__c.CBInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>CB Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CBAccount__c</columns>
        <columns>CBDivision__c</columns>
        <columns>CBPeriod__c</columns>
        <columns>CBVariable1__c</columns>
        <columns>InvoiceDate__c</columns>
        <columns>Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>